--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </a>
       </div>
 
+      <div class="gallery-thumb">
+        <a class="modal-link" href="img/tall-woman.jpg" data-title="This doorway causes problems for me.">
+          <img src="img/tall-woman.jpg" alt="Tall!" />
+        </a>
+      </div>
       <!--  PASTE NEW PLACEHOLDERS ABOVE HERE -->
 
       <!-- TEMPLATE FOR MORE IMAGES: JUST COPY AND PASTE ONE FOR EVERY IMAGE ABOVE -->
