--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Modal Madness demo</title>
-  <link rel="stylesheet" href="../dist/css/main.css">
+  <link rel="stylesheet" href="../dist/css/modalmadness.css">
 </head>
 
 <body>
@@ -85,7 +85,12 @@
 
 
 
-  <script src="../dist/main.js"></script>
+  <script src="../dist/modalmadness.js"></script>
+  <script>
+    if (modalMadness) {
+      modalMadness.init()
+    }
+  </script>
 </body>
 
 </html>
