updated demo page

--- a/index.html
+++ b/index.html
@@ -5,70 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Modal Madness demo</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Monoton&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../dist/css/modalmadness.css">
 </head>
 
 <body>
+  <div id="container">
+    <section class="gallery-page-new">
+      <h1>Modal Madness demo</h1>
 
-  <section class="gallery-page-new">
-    <h1>Modal Madness demo</h1>
-
-    <div class="blurb">
-      <p>
-        Blurb about the images here.
-      </p>
-    </div>
-
-    <div class="thumbnail-container">
-      <!--  PASTE NEW PLACEHOLDERS BELOW HERE -->
-      <div class="gallery-thumb">
-        <a class="modal-link" href="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
-          data-title="Homer with no binoculars">
-          <img src="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
-            alt="Homer Simpson" />
-        </a>
+      <div class="blurb">
+        <p>
+          Images of varying sizes are accommodated. (Click on them to see.)
+        </p>
       </div>
 
-      <div class="gallery-thumb">
-        <a class="modal-link" href="img/Baby-Hitler-random-23128715-430-355.jpg" data-title="Baby Hitler">
-          <img src="img/Baby-Hitler-random-23128715-430-355.jpg" alt="Baby Hitler photo" />
-        </a>
+      <div class="thumbnail-container">
+        <!--  PASTE NEW PLACEHOLDERS BELOW HERE -->
+        <div class="gallery-thumb">
+          <a class="modal-link" href="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
+            data-title="Homer with no binoculars">
+            <img src="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
+              alt="Homer Simpson" />
+          </a>
+        </div>
+
+        <div class="gallery-thumb">
+          <a class="modal-link" href="img/Baby-Hitler-random-23128715-430-355.jpg" data-title="Baby Hitler">
+            <img src="img/Baby-Hitler-random-23128715-430-355.jpg" alt="Baby Hitler photo" />
+          </a>
+        </div>
+
+        <div class="gallery-thumb">
+          <a class="modal-link" href="img/20-Extremely-Weird-Stock-Photographs006.jpg"
+            data-title="Man on banana phone yelling">
+            <img src="img/20-Extremely-Weird-Stock-Photographs006.jpg" alt="Man on banana phone yelling" />
+          </a>
+        </div>
+
+        <div class="gallery-thumb">
+          <a class="modal-link" href="img/s-l1000.jpg"
+            data-title="I didn't realize that book I gave away was worth something.">
+            <img src="img/s-l1000.jpg" alt="Regret" />
+          </a>
+        </div>
+
+        <div class="gallery-thumb">
+          <a class="modal-link" href="img/tall-woman.jpg" data-title="This doorway causes problems for me.">
+            <img src="img/tall-woman.jpg" alt="Tall!" />
+          </a>
+        </div>
       </div>
 
-      <div class="gallery-thumb">
-        <a class="modal-link" href="img/20-Extremely-Weird-Stock-Photographs006.jpg"
-          data-title="Man on banana phone yelling">
-          <img src="img/20-Extremely-Weird-Stock-Photographs006.jpg" alt="Man on banana phone yelling" />
-        </a>
-      </div>
+    </section>
+  </div>
 
-      <div class="gallery-thumb">
-        <a class="modal-link" href="img/s-l1000.jpg"
-          data-title="I didn't realize that book I gave away was worth something.">
-          <img src="img/s-l1000.jpg" alt="Regret" />
-        </a>
-      </div>
-
-      <div class="gallery-thumb">
-        <a class="modal-link" href="img/tall-woman.jpg" data-title="This doorway causes problems for me.">
-          <img src="img/tall-woman.jpg" alt="Tall!" />
-        </a>
-      </div>
-      <!--  PASTE NEW PLACEHOLDERS ABOVE HERE -->
-
-      <!-- TEMPLATE FOR MORE IMAGES: JUST COPY AND PASTE ONE FOR EVERY IMAGE ABOVE -->
-      <!--
-
-    <div class="gallery-thumb">
-      <a class="modal-link" href="LINK-TO-LARGE-IMAGE-YOU-WANT-TO-SHOW" data-title="CAPTION_TEXT_FOR_IMAGE_THAT_WILL_APPEAR">
-        <img src="LINK_TO_SQUARE_THUMBNAIL_IMAGE" alt="OPTIONAL_NAME_FOR_IMAGE" />
-      </a>
-    </div>
-      -->
-
-    </div>
-
-  </section>
   <section id="modal-window">
     <span id="modal-close">X</span>
     <span id="modal-prev">&lt;</span>
@@ -82,6 +74,7 @@
       </div>
     </div>
   </section>
+
 
 
 
