added demo site

--- a/index.html
+++ b/index.html
@@ -24,41 +24,51 @@
       <div class="thumbnail-container">
         <!--  PASTE NEW PLACEHOLDERS BELOW HERE -->
         <div class="gallery-thumb">
-          <a class="modal-link" href="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
-            data-title="Homer with no binoculars">
-            <img src="img/141216183300-simpsons-25-anniversary-image-4-horizontal-large-gallery.jpg"
-              alt="Homer Simpson" />
+          <a class="modal-link" href="/img/updated/4k-wallpaper-citrus-fruit-close-up-2084239.jpg"
+            data-title="Oranges! Oranges! <a href='https://www.pexels.com/photo/photo-of-pile-of-oranges-2084239/' target='_blank'>Source</a>">
+            <img src="/img/updated/4k-wallpaper-citrus-fruit-close-up-2084239.jpg" alt="Oranges" />
           </a>
         </div>
 
         <div class="gallery-thumb">
-          <a class="modal-link" href="img/Baby-Hitler-random-23128715-430-355.jpg" data-title="Baby Hitler">
-            <img src="img/Baby-Hitler-random-23128715-430-355.jpg" alt="Baby Hitler photo" />
+          <a class="modal-link" href="/img/Baby-Hitler-random-23128715-430-355.jpg"
+            data-title="Baby Hitler <a href='http://www.fanpop.com/clubs/random/images/23128715/title/baby-hitler-photo' target='_blank'>Source</a>">
+            <img src="/img/Baby-Hitler-random-23128715-430-355.jpg" alt="Baby Hitler photo." />
           </a>
         </div>
 
         <div class="gallery-thumb">
-          <a class="modal-link" href="img/20-Extremely-Weird-Stock-Photographs006.jpg"
-            data-title="Man on banana phone yelling">
-            <img src="img/20-Extremely-Weird-Stock-Photographs006.jpg" alt="Man on banana phone yelling" />
+          <a class="modal-link" href="/img/updated/beach-body-of-water-feet-1770803.jpg"
+            data-title="Upside down. <a target='_blank' href='https://www.pexels.com/photo/person-diving-on-body-of-water-1770803/'>Source</a>">
+            <img src="/img/updated/beach-body-of-water-feet-1770803.jpg" alt="Man in water" />
           </a>
         </div>
 
         <div class="gallery-thumb">
-          <a class="modal-link" href="img/s-l1000.jpg"
-            data-title="I didn't realize that book I gave away was worth something.">
-            <img src="img/s-l1000.jpg" alt="Regret" />
+          <a class="modal-link" href="/img/updated/cap-chin-close-up-2499811.jpg"
+            data-title="Hmm... <a href='https://www.pexels.com/photo/portrait-photo-of-elderly-man-leaning-chin-on-his-hand-palm-2499811/' target='_blank'>Source</a>">
+            <img src="/img/updated/cap-chin-close-up-2499811.jpg" alt="Man with hat" />
           </a>
         </div>
 
         <div class="gallery-thumb">
-          <a class="modal-link" href="img/tall-woman.jpg" data-title="This doorway causes problems for me.">
-            <img src="img/tall-woman.jpg" alt="Tall!" />
+          <a class="modal-link" href="/img/updated/ancient-architecture-art-797719.jpg"
+            data-title="I feel eiffel. <a href='https://www.pexels.com/photo/eiffel-tower-paris-797719/' target='_blank'>Source</a>">
+            <img src="/img/updated/ancient-architecture-art-797719.jpg" alt="" />
+          </a>
+        </div>
+
+        <div class="gallery-thumb">
+          <a class="modal-link" href="/img/updated/aircraft-airplane-boat-1575833.jpg"
+            data-title="Dum dum. <a href='https://www.pexels.com/photo/top-view-photo-of-boat-near-airplane-1575833/' target='_blank'>Source</a>">
+            <img src="/img/updated/aircraft-airplane-boat-1575833.jpg" alt="Dum dum..." />
           </a>
         </div>
       </div>
 
     </section>
+    <span id="credit">Made with love by <a href="https://nataloo.com">Nataloo</a> | <a
+        href="https://github.com/gluis/modal-madness">Code</a></span>
   </div>
 
   <section id="modal-window">
