updated name with hyphen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Modal Madness demo</title>
 
   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Monoton&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../dist/css/modalmadness.css">
+  <link rel="stylesheet" href="../dist/css/modal-madness.css">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
 
 
 
-  <script src="../dist/modalmadness.js"></script>
+  <script src="../dist/modal-madness.js"></script>
   <script>
     if (modalMadness) {
       modalMadness.init()
