--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="thumbnail-container">
         <!--  PASTE NEW PLACEHOLDERS BELOW HERE -->
         <div class="gallery-thumb">
+          <!-- <a class="modal-link" href="/img/updated/experiment-med-lrg.jpg" -->
           <a class="modal-link" href="/img/updated/4k-wallpaper-citrus-fruit-close-up-2084239.jpg"
             data-title="Oranges! Oranges! <a href='https://www.pexels.com/photo/photo-of-pile-of-oranges-2084239/' target='_blank'>Source</a>">
             <img src="/img/updated/4k-wallpaper-citrus-fruit-close-up-2084239.jpg" alt="Oranges" />
@@ -31,6 +32,7 @@
         </div>
 
         <div class="gallery-thumb">
+          <!-- <a class="modal-link" href="/img/updated/experiment-2-med-lrg.jpg" -->
           <a class="modal-link" href="/img/Baby-Hitler-random-23128715-430-355.jpg"
             data-title="Baby Hitler <a href='http://www.fanpop.com/clubs/random/images/23128715/title/baby-hitler-photo' target='_blank'>Source</a>">
             <img src="/img/Baby-Hitler-random-23128715-430-355.jpg" alt="Baby Hitler photo." />
